horizontal scroll bar fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,7 @@
 html {
     min-height: 100vh;
     position:relative;
+    overflow-x:hidden;
 }
 
 body {
